--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "[website](https://kachi_hi.gitlab.io/it-project/html)",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon backend/index.js"
+    "dev": "nodemon backend/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
     "undici": "^5.14.0"
   }
