--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
+    "parcel": "^2.8.3",
     "pm2": "^5.2.2",
     "undici": "^5.14.0"
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
